Update the build yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,14 @@
 name: .NET Build
-
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-
+  
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
 
@@ -21,7 +18,7 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore src/azure-carbon-cli/azure-carbon-cli.csproj
 
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build src/azure-carbon-cli/azure-carbon-cli.csproj --no-restore
