--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,7 +18,7 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore dependencies
-      run: dotnet restore src/azure-carbon-cli/azure-carbon-cli.csproj
+      run: dotnet restore src/azure-carbon-cli.csproj
 
     - name: Build
-      run: dotnet build src/azure-carbon-cli/azure-carbon-cli.csproj --no-restore
+      run: dotnet build src/azure-carbon-cli.csproj --no-restore
