--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
           prerelease: false
 
       - name: Test
-        run: ls -R ./azure-carbon-cli/azure-carbon-cli
+        run: ls -R .
 
       # - name: Upload Release Asset
       #   uses: actions/upload-release-asset@v1
