Restore upload release asset step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,12 +72,12 @@ jobs:
       - name: Test
         run: ls -R .
 
-      # - name: Upload Release Asset
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: ./azure-carbon-cli/azure-carbon-cli/nupkg/*.nupkg
-      #     asset_name: azure-carbon-cli.nupkg
-      #     asset_content_type: application/octet-stream
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./nupkg/azure-carbon-cli.*.nupkg
+          asset_name: azure-carbon-cli.nupkg
+          asset_content_type: application/octet-stream
